fix: emoji picker alignment of emojis with static widths

--- a/src/app/components/shared/message/styles/message-reactions.scss
+++ b/src/app/components/shared/message/styles/message-reactions.scss
@@ -32,6 +32,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   flex-direction: row !important;
+  justify-content: space-between;
 }
 
 .reaction-emoji-btn {
@@ -40,6 +41,11 @@
   cursor: pointer;
   font-size: 20px;
   height: 40px;
+  max-width: 40px;
+  aspect-ratio: 1/1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     background-color: var(--bg-clr);
